add notes from CPEG presentation

--- a/notes.tex
+++ b/notes.tex
@@ -234,5 +234,20 @@ To-do list after Venice CesIfo 06/15/17:
 			\item he has a paper about concessions being used against you; he also gave me the reference for another one but I've forgotten it
 		\end{itemize}
 
+\vskip.3in
+Notes from CPEG, Oct. 25, 2019 presentation:
+\begin{itemize}
+	\item Arnaud
+		\begin{itemize}
+			\item $\de$ are not exogenous (look at Brexit)
+			\item Proposes a one-shot game to replace the repeated game. Simple bayesian game with difference preferences depening on type.
+		\end{itemize}
+	\item Raphael Godefroy
+		\begin{itemize}
+			\item Can $\de_i$ be a function of $g$? That is, likelihood of defection decreases as concession gets better
+		\end{itemize}
+\end{itemize}
+
+
 \end{itemize}
 \end{document}
