add EJPE Reviewer 1 comments (Reviewer 2 PDF in repo separately)

--- a/notes.tex
+++ b/notes.tex
@@ -295,6 +295,12 @@ Notes from CPEG, Oct. 25, 2019 presentation:
 		\end{itemize}
 \end{itemize}
 
+\newpage
+Review 1 from EJPE (Email from Toke Aidt, August 19, 2018): \\
+
+While clearly these are interesting issues, I have difficulties reading this paper. Everything is presented in a very unclear manner. Game-theoretical concepts are invoked, but typically not correctly. For instance, an equilibrium is a strategy profile (one strategy for each type of each player). Hence it does not make sense to say, as the authors do in Theorem 1 on page 10, that something is an equilibrium strategy for one type without also specifying what others do. As another example, on page 18, the authors say that “The revelation principle is used to attain truthful self-identification.” But in reality, the revelation principle is just an argument for why it is without loss of generality to restrict attention to direct mechanisms. The truthfulness of messages is guaranteed by requiring the mechanism to be incentive compatible, something the authors do not address. \\
+
+Another thing. It is not considered a good idea to introduce new assumptions, which have not been mentioned before, in the proof of a proposition, as happens in the alleged proof of Theorem 4 on page 27.
 
 \end{itemize}
 \end{document}
