move thm 4 assumption out of proof, into text (EJPE ref. 1)

--- a/draft.tex
+++ b/draft.tex
@@ -296,11 +296,12 @@ U_l=X_{FF}+peg_h
 %When concessions are inefficient, $M$ can still improve over bilateral negotiation. \\
 % \emph{Proof}: A mechanism works as in proof (6) with the additional liability that high-high concession exchanges are no longer efficient so a mechanism's advantage is not as strong. 
 
+Before turning to our main result for the case where the material value of concessions can be destroyed, we make a slight simplification of the general model here. This is not essential for the results to hold; we make these simplifciations for ease of calculation and demonstration of the results. First, we restrict the functional forms of $T(\cdot),W(\cdot)$ and $D(\cdot)$ so that each is a scalar multiplied by its arguments. This linear functional form implies that equilibrium optimization has high types choosing $\alpha=1$ (because a concession would only come from another high type in equilibrium) and low types choosing $\alpha=0$. To further simplify calculations, we also assume that $s_1=s_2=m_1=m_2=1.$ 
+
 \begin{theorem}
 		Assume the high types are not patient enough to separate without concessions and that concessions have material value that can be destroyed. There are parameters under which the optimal equilibrium is a separating equilibrium in which concessions are inefficient.
 	\label{theorem:4}
 \end{theorem}
-
 \emph{Proof}: See appendix.
 
 Inefficient concessions are optimal under low $p$ (there's a good chance of facing a low type who will use the concession against you) as well as when $\de_l$ is low ($g^*$ is decreasing in the patience of the low type, as a larger concession is required to deter an impatient low-type from being untruthful). 
@@ -460,7 +461,7 @@ i.e.,
 \ee
 \\
 \emph{Proof of Theorem \ref{theorem:4}:}\\
-Because it is relatively complicated to calculate equilibrium concessions in the general case, we make a slight simplification of the general model here. Restrict functional forms of $T(\cdot),W(\cdot)$ and $D(\cdot)$ so that each is a scalar multiplied by its arguments. Also assume that $s_1=s_2=m_1=m_2=1.$ Because of linearity, equilibrium optimization has high types choosing $\alpha=1$ (because a concession would only come from another high type in equilibrium) and low types choosing $\alpha=0$. Note that none of these simplifications is essential for the results to hold but we make them for ease of calculation and demonstration of the results. The low type's IC constraint binds so with $e=1$, the optimal concession can be calculated to be $g^1= \frac{p(1-d_l)(D+T)}{(1-d_l)(1-pT)+(1-p)D}$. The high type's utility when $e=1$ is $\frac{1}{1-d_h}\left\{pT(1+g^*) + (1-p)(W-D(1+g^*))\right\} - g^1$.
+Given the functional form restrictions that $T(\cdot),W(\cdot)$ and $D(\cdot)$ are each a scalar multiplied by its arguments and $s_1=s_2=m_1=m_2=1$, high types choose $\alpha=1$ (because a concession would only come from another high type in equilibrium) and low types choose $\alpha=0$. Because the low type's IC constraint binds, with $e=1$ the optimal concession can be calculated to be $g^1= \frac{p(1-d_l)(D+T)}{(1-d_l)(1-pT)+(1-p)D}$. The high type's utility when $e=1$ is then $\frac{1}{1-d_h}\left\{pT(1+g^*) + (1-p)(W-D(1+g^*))\right\} - g^1$.
 
 When $e=0$---that is, the future material value of the concessions is destroyed---we are essentially back in the case of Section~\ref{sec:bench} and the minimum separating concession is $g^0=p(T+D)$. The threshold for high types to cooperate is again $\frac{W}{T+D}$. High type utility when $e=0$ is $\frac{1}{1-d_h}\left\{pT + (1-p)(W-D)\right\} - g^0$.
 
