make small expositional changes; improve reference to revelation principle

--- a/draft.tex
+++ b/draft.tex
@@ -54,7 +54,7 @@ University of California, San Diego\\
 
 
 \begin{abstract}
-When two parties are engaged in conflict and each distrusts the other's ability to pursue peace, concessions can be used to indicate an interest in making peace. However, when negotiating parties are concerned that concessions could be used against them in the future, a lack of trust can prevent optimal concessions from being made or reduce the possibility of peace. We use mechanism design to explore ways in which a third party mediator can act as a guarantor that promised concessions will be delivered, thereby reducing inefficiencies and increasing the potential for peace. In this process, we open up a rationale for mediation: to remove the inefficiencies of signaling in a preliminary round of negotiations. 
+When two parties are engaged in conflict and each distrusts the other's ability to pursue peace, concessions can be used to indicate an interest in making peace. However, when negotiating parties are concerned that concessions could be used against them in the future, a lack of trust can prevent optimal concessions from being made. It can also reduce the possibility of peace. We use mechanism design to explore ways in which a third party mediator can act as a guarantor that promised concessions will be delivered, thereby reducing inefficiencies and increasing the potential for peace. In this process, we open up a new rationale for mediation: to remove the inefficiencies of signaling in a preliminary round of negotiations. 
 \end{abstract}
 
 \section{Introduction} %LAKE For instance, the problem you begin with in the cases of Israel/Syria and West Bank are well understood as bargaining over assets that confer future power. But this is not understood as a problem of private information, as you treat it here, but as one of credible commitment. Its not clear how your types map onto the commitment problem. HOW: THAT TYPES COULD CHANGE OVER TIME?
@@ -152,7 +152,7 @@ Assume $\delta_h> \delta^*$ and $\delta_l < \delta^*$.
 
 \section{Analysis of Benchmark Cases}
 \label{sec:bench}
-When countries are faced with doubts about each other's motives, they can proceed in several different ways. There are three basic types of equilibria that this analysis will examine.\footnote{If the discount factor for the high type ($\delta_h$) exceeds the cutoff found in expression (1), there are many types of equilibria; consider for instance oscillating every other period between Peace and War with a grim trigger War threat. In this paper, we are not interested in these equilibria because they are not as realistic for applications to conflict scenarios. These are also always payoff dominated by at least one of the other equilibria discussed, so are not attractive.} The Appendix provides a thorough analysis of the various equilibria as well as all proofs for this section. 
+When countries are faced with uncertainty about each other's motives, they can proceed in several different ways. There are three basic types of equilibria that this analysis will examine.\footnote{If the discount factor for the high type ($\delta_h$) exceeds the cutoff found in expression (1), there are many types of equilibria; consider for instance oscillating every other period between Peace and War with a grim trigger War threat. In this paper, we are not interested in these equilibria because they are not as realistic for applications to conflict scenarios. These are also always payoff dominated by at least one of the other equilibria discussed, so are not attractive.} The Appendix provides a thorough analysis of the various equilibria as well as all proofs for this section. 
 \\
 \\
 {\bf \emph{Pooling equilibrium}\\}
@@ -188,11 +188,11 @@ Though it will not be modeled here, a stochastic component -- when countries occ
 \\
 {\bf \emph{Concessions Separating Equilibrium}\\}
 \vskip-.2in
-The third option is for distrustful countries to use concessions as a way of building trust. In the model this is the \emph{concessions separating equilibrium}. This equilibrium is costly, but can be worth the investment if the other country also cooperates. It is also not as risky as cooperating without concessions, as in the previous equilibrium. The concessions are given before more substantive actions, thus concessions are a costly signal that the other country is serious about cooperating. Most agreements come with concessions, and in many cases, though not all, they are used as signals. The goal is to use this option to avoid continual distrust; a mediator is one way of enabling this solution. 
+The third option is for distrustful countries to use concessions as a way of building trust. In the model this is the \emph{concessions separating equilibrium}. This equilibrium is costly, but can be worth the investment if the other country also cooperates. It is also not as risky as cooperating without concessions, as in the previous equilibrium. The concessions are given before more substantive actions, thus concessions are a costly signal that the other country is serious about cooperating. Most agreements come with concessions, and in many cases, though not all, they are used as signals. The goal is to use this option to avoid continual distrust; we will show in Section 5 that a mediator is one way of enabling this solution. 
 
 In the \emph{concessions separating equilibrium}, low types do not give concessions while high types give a concession of a certain size in period 0. If both countries receive concessions, they know the other is a high type and both play Trust in subsequent periods. Otherwise, if both players do not receive concessions, there is at least one low type so both countries play Fight in subsequent periods.
 
-The analysis is conducted with standard incentive compatibility constraints. Consider the commonly held grim trigger punishment path of the ``Fight, Fight'' equilibrium being played forever if Fight is played by any party in any round. This paper will focus on separating equilibria in which high types make use of concessions to identify themselves in hopes of establishing Peace. Because we look at grim trigger punishments, there are essentially only 4 equilibrium combinations of strategies after concessions are given:
+The analysis is conducted with standard incentive compatibility constraints. Consider the commonly employed grim trigger punishment path of the ``Fight, Fight'' equilibrium being played forever if Fight is played by any party in any round. This paper will focus on separating equilibria in which high types make use of concessions to identify themselves in hopes of establishing Peace. Because we look at grim trigger punishments, there are essentially only 4 equilibrium combinations of strategies after concessions are given:
 1) Both countries play Trust always, 
 2) Both play Fight always, 
 3) Country 1 plays Fight in round 1 while country 2 plays Trust, which is followed by both countries playing Fight from round 2 onwards and 
@@ -314,11 +314,11 @@ All results in this paper thus far have relied on bilateral engagement. We will 
 
 Because many conflicts occur in an international arena with no clear enforceable rule of law (Waltz, 2002), much of the literature has focused on self-enforcing mechanisms. If however a credible third party does exist, then results beyond self enforcing agreements can be relevant.  A mediator with such enforcement ability is said to use manipulative mediation, specifically if she ``offered to verify compliance with the agreement''  or ``took responsibility for concessions''  (Bercovitch 1997). We will now introduce a mediator who does both. 
 
-The model setup is as before, but instead of parties being free to give whatever concession they want, the mediator solicits type reports and then enforces incentive compatible concessions. This mediator wil be modeled as a mechanism $M$.
+The model setup is as before, but instead of parties being free to give whatever concession they want, the mediator solicits type reports and then enforces incentive compatible concessions. The Revelation Principle tells us that it is without loss of generality to restrict attention to direct mechanisms, that is, mechanisms in which countries simply declare their types (Myerson 1979). This mediator will be modeled as a mechanism $M$.
 
-$M$ inputs the reports of types $t_1$ and $t_2$ and outputs the required concessions $g_1$ and $g_2$ so that $ M:(t_1,t_2)\rightarrow( g_1(\cdot), g_2(\cdot))$.  The countries are bound to send the mandated concessions. In Sections~\ref{sec:bench} and \ref{sec:IC}, the same concession must be sent to both types since types are private information. $M$ can differentiate based on recipient's type. Otherwise, the setup is the same as in Section~\ref{sec:matval} where concessions have future material value.  
+$M$ inputs the reports of types $t_1$ and $t_2$ and outputs the required concessions $g_1$ and $g_2$ so that $ M:(t_1,t_2)\rightarrow( g_1(\cdot), g_2(\cdot))$.  The countries are bound to send the mandated concessions. In Sections~\ref{sec:bench} and \ref{sec:IC}, the same concession must be sent to both types since types are private information. $M$ can differentiate based on recipient's type. Otherwise, the setup is the same as in Section~\ref{sec:matval} where concessions have future material value: both individual rationality and incentive compatibility constraints must be satisfied, leading to truthful self-identification. 
 
-The welfare target is again the sum of the high type utilities. Qualitatively, similar results would hold if we also included low types in the analysis with weighting based on $p$. In the analysis, incentive compatibility and individual rationality constraints must be satisfied. The revelation principle is used to attain truthful self-identification (Myerson 1979). 
+The welfare target is again the sum of the high type utilities. Qualitatively, similar results would hold if we also included low types in the analysis with weighting based on $p$. 
 
 \begin{theorem}
 	Assume that concessions have future material value.
@@ -328,7 +328,7 @@ The welfare target is again the sum of the high type utilities. Qualitatively, s
 	\end{enumerate}
 	\label{theorem:5}
 \end{theorem}
-\emph{Proof:} (a) Under $M$, the low type IC can bind without having high types give a concession to low types. There is no need then to give inefficient concessions: high types will invest in civil society and improve the giver's welfare and low types will never receive the concession. %The equilibrium separating concession $g^{*M}$ will be larger than $g^*$ in this case because the low type who reports truthfully receives a concession with zero probability: 
+\emph{Proof:} (a) Under $M$, the low type incentive constraint can bind without having high types give a concession to low types. There is no need then to give inefficient concessions: high types will invest in civil society and improve the giver's welfare and low types will never receive the concession. %The equilibrium separating concession $g^{*M}$ will be larger than $g^*$ in this case because the low type who reports truthfully receives a concession with zero probability: 
 %\be
 %g^{*M}= \frac{p(X_{FT}^l-X_{FF}^l)}{1-p}
 %\ee
@@ -348,7 +348,7 @@ The value of truth telling by the mediator has been examined in the literature. 
 
 
 \section{Conclusion}
-In states of perpetual conflict, concessions have been shown in the literature to ease distrust. Our paper shows a mechanism by which this might work. In our model's setup, there are three potential types of equilibria: first, if prior trust is low a no-concessions pooling equilibrium exists, which is essentially a state of war for all types. Second, if prior trust is sufficiently high, a no-concessions pooling equilibrium exists where high types trust in the first period and can maintain that trust if both are high types. Third, the most intuitive or realistic type of equilibrium, a concessions giving separating equilibrium exists where high types offer concessions to eliminate the distrust. 
+In states of perpetual conflict, concessions have been shown in the literature to ease distrust. Our paper shows a mechanism by which this might work. In our model's setup, there are three classes of interesting equilibria: first, if prior trust is low a no-concessions pooling equilibrium exists, which is essentially a state of war for all types. Second, if prior trust is sufficiently high, a no-concessions pooling equilibrium exists where high types trust in the first period and can maintain that trust if both are high types. Third, the most intuitive or realistic type of equilibrium, a concessions giving separating equilibrium exists where high types offer concessions to eliminate the distrust. 
 
 While parties generally are better off when concessions are efficient, we have shown that inefficiency may be useful. In particular, if concessions may be used for further material harm against the giver, it may be better to give inefficient concessions. This explanation captures the hesitancy of nations to fully engage in moving forward with a peace process when there is mutual distrust. %As previously shown in the literature, if parties are trying to enter a club or alliance, it may be necessary to give inefficient concessions. %Our model can achieve that result, first shown in Camerer (1988), that inefficiency plays a role in pre-play communication and can be used to separate out unwanted partners. Our model can also be used to achieve a similar matching result as Prendergast and Stole (2001) who show how if player values his own type, inefficiency can be preferred. To achieve this countries must have preferences over the types of the recipients of their concessions. If there is a regret of giving a concession to a country who does not pan out to be an ally, then inefficiency can be preferred. While this is a relatively behavioral or emotional explanation for interpersonal gift giving, it might hold some weight in an international political arena. This flavor, of matching types, is similar in nature to Prendergast and Stole, who use two different, though equal types, while our explanation uses a high and a low type.
 %I have further shown that 
