clarify role of mediator

--- a/draft.tex
+++ b/draft.tex
@@ -172,7 +172,7 @@ In any case, these long lasting stalemates are the types of conflict which are m
 The other two equilibria are separating equilibria in which low types and high types have different strategies. In a \emph{no-concessions separating equilibrium}, no concessions are given by either type in period 0. In period 1, high types play Trust while low types play Fight. So long as there are two high types, as revealed by their period 1 play, both countries continue to play Trust in all following periods. Otherwise, both countries play Fight in all following periods. 
 
 \begin{theorem}
-	The strategy of not giving concessions in period 0, then playing Trust unless the other country defects to Fight is an equilibrium strategy for high types if $\delta_h \geq \frac{W}{(1-p)W + p(T + D)}$.
+	When low types give no concessions in period 0 and always play Fight thereafter, the strategy of not giving concessions in period 0, then playing Trust unless the other country defects to Fight is an equilibrium strategy for high types if $\delta_h \geq \frac{W}{(1-p)W + p(T + D)}$.
 	\label{theorem:1}
 \end{theorem}
 \emph{Proof}: See appendix.
@@ -312,7 +312,7 @@ This finding of inefficiency is for profoundly different reasons than the litera
 \label{sec:med}
 All results in this paper thus far have relied on bilateral engagement. We will now consider the involvement of a mediator which will be modeled as a mechanism. 
 
-Because many conflicts occur in an international arena with no clear enforceable rule of law (Waltz, 2002), much of the literature has focused on self-enforcing mechanisms. If however a credible third party does exist, then results beyond self enforcing agreements can be relevant.  A mediator with such enforcement ability is said to use manipulative mediation, specifically if she ``offered to verify compliance with the agreement''  or ``took responsibility for concessions''  (Bercovitch 1997). We will now introduce a mediator who does both. 
+Because many conflicts occur in an international arena with no clear enforceable rule of law (Waltz, 2002), much of the literature has focused on self-enforcing mechanisms. If however a credible third party does exist, then results beyond self enforcing agreements can be relevant.  A mediator with such enforcement ability is said to use manipulative mediation, specifically if she ``offered to verify compliance with the agreement''  or ``took responsibility for concessions''  (Bercovitch 1997). We will now introduce a mediator who does the latter.\footnote{Here the parties' actions in the stage game as well as their choices of whether to spend concessions on the civil versus the military sector are assumed to derive from their type, so there is no need for the mediator to enforce these decisions once the type is revealed. Thus, we do not assume that the mediator can do either because it is not necessary.} 
 
 The model setup is as before, but instead of parties being free to give whatever concession they want, the mediator solicits type reports and then enforces incentive compatible concessions. The Revelation Principle tells us that it is without loss of generality to restrict attention to direct mechanisms, that is, mechanisms in which countries simply declare their types (Myerson 1979). This mediator will be modeled as a mechanism $M$.
 
